SWOriginStore is no longer needed https://bugs.webkit.org/show_bug.cgi?id=240003

Reviewed by Chris Dumez.

Source/WebCore:

Covered by existing tests.

* Headers.cmake:
* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* loader/DocumentLoader.cpp:
* workers/service/SWClientConnection.h:
* workers/service/WorkerSWClientConnection.cpp:
* workers/service/WorkerSWClientConnection.h:
* workers/service/server/SWOriginStore.cpp: Removed.
* workers/service/server/SWOriginStore.h: Removed.
* workers/service/server/SWServer.cpp:
* workers/service/server/SWServer.h:

Source/WebKit:

No observable change, we remove the SWOrigin optimization as its main remaining use
is to optimize the case of a page being loaded by service worker instead of app cache which is a tiny edge case.

* NetworkProcess/NetworkSession.cpp:
* NetworkProcess/NetworkSession.h:
* NetworkProcess/ServiceWorker/WebSWOriginStore.cpp: Removed.
* NetworkProcess/ServiceWorker/WebSWOriginStore.h: Removed.
* NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
* NetworkProcess/ServiceWorker/WebSWServerConnection.h:
* WebKit.xcodeproj/project.pbxproj:
* WebProcess/Storage/WebSWClientConnection.cpp:
* WebProcess/Storage/WebSWClientConnection.h:
* WebProcess/Storage/WebSWClientConnection.messages.in:
* WebProcess/Storage/WebSWOriginTable.cpp: Removed.
* WebProcess/Storage/WebSWOriginTable.h: Removed.

Canonical link: https://commits.webkit.org/250297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293824 268f45cc-cd09-0410-ab3c-d52691b4dbfc