Source/WebKit/NetworkProcess/NetworkSession.h
@@ -81,7 +81,6 @@ class WebPageNetworkParameters;
 class WebResourceLoadStatisticsStore;
 class WebSharedWorkerServer;
 class WebSocketTask;
-class WebSWOriginStore;
 class WebSWServerConnection;
 struct NetworkSessionCreationParameters;
 struct SessionSet;
@@ -203,9 +202,6 @@ public:
 
     WebCore::SWServer* swServer() { return m_swServer.get(); }
     WebCore::SWServer& ensureSWServer();
-    WebSWOriginStore* swOriginStore() const; // FIXME: Can be private?
-    void registerSWServerConnection(WebSWServerConnection&);
-    void unregisterSWServerConnection(WebSWServerConnection&);
 
     bool hasServiceWorkerDatabasePath() const;
 #endif
